--- a/frontend/home.html
+++ b/frontend/home.html
@@ -1,7 +1,15 @@
 <!doctype html>
 <html lang="en">
   <script src="home.js"></script>
+  <script
+    src="https://kit.fontawesome.com/784dd5315a.js"
+    crossorigin="anonymous"
+  ></script>
   <link href="home.css" rel="stylesheet" />
+  <link
+    rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/flag-icons/css/flag-icons.min.css"
+  />
 
   <head>
     <meta charset="UTF-8" />
@@ -12,13 +20,46 @@
       <img alt="logo" src="../assets/images/logo.png" />
     </header>
     <main>
-      <aside></aside>
-      <p></p>
-      <p></p>
-      <p></p>
-      <p></p>
-      <p></p>
-      <p></p>
+      <div>
+        <aside>
+          <ul>
+            <!-- 여기서 국가별 요소는 우선 수동으로 몇개 넣고 나중에 js 처리-->
+            <li>
+              <span class="fi fi-cn"></span>
+              <a href="">중국</a>
+            </li>
+            <li>
+              <a href="">
+                <span class="fi fi-jp"></span>
+                일본
+              </a>
+            </li>
+            <li>
+              <a href="">
+                <span class="fi fi-us"></span>
+                미국
+              </a>
+            </li>
+          </ul>
+        </aside>
+      </div>
+      <div>
+        <div>
+          <span class="fi fi-cn"></span>
+          <p>중국</p>
+          <p>CNY</p>
+          <p>위안</p>
+        </div>
+        <div>
+          <label>
+            <input type="text" />
+          </label>
+          <button></button>
+        </div>
+      </div>
+      <div>
+        <table></table>
+      </div>
     </main>
     <footer>
       <p>Copyright 2025 EekErk</p>
