--- a/frontend/home.html
+++ b/frontend/home.html
@@ -1,12 +1,11 @@
 <!doctype html>
 <html lang="en">
-  <script src="home.js"></script>
   <script
     src="https://kit.fontawesome.com/784dd5315a.js"
     crossorigin="anonymous"
   ></script>
-  <link href="reset.css" rel="stylesheet" />
-  <link href="home.css" rel="stylesheet" />
+  <link href="css/reset.css" rel="stylesheet" />
+  <link href="css/home.css" rel="stylesheet" />
   <link
     rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/flag-icons/css/flag-icons.min.css"
