--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Title</title>
+    <title>EekErk</title>
   </head>
-  <body></body>
+  <body>
+    <main class="App"></main>
+    <script src="js/main.js"></script>
+  </body>
 </html>
