Introduce reusable component structure and modularize core functionality
- Added a reusable `Component.js` class for managing state and rendering.
- Modularized core files: `router.js` and `state.js` into the `core/` directory.
- Created a new entry point `index.js` for initializing the app.
- Updated `index.html` to include the new script with ES module support.
- Replaced `main.js` with `App.js` for simplified SPA setup.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     <main class="App"></main>
-    <script src="js/main.js"></script>
+    <script src="js/App.js" type="module"></script>
   </body>
 </html>
