Initialize `App` structure and main logic, implementing modular components (`Header`, `SidebarCountry`, `MainContent`, `Footer`). Refactor entry point in `index.js` with DOM event binding and global instance management. Update `index.html` for enhanced app structure and resource inclusion.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,11 +1,28 @@
 <!doctype html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="UTF-8" />
-    <title>EekErk</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>EekErk - 환전소 비교 서비스</title>
+
+    <!-- 외부 리소스 -->
+    <script
+      src="https://kit.fontawesome.com/784dd5315a.js"
+      crossorigin="anonymous"
+    ></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/flag-icons/css/flag-icons.min.css"
+    />
+
+    <!-- 로컬 스타일 -->
+    <link href="css/reset.css" rel="stylesheet" />
+    <link href="css/home.css" rel="stylesheet" />
   </head>
   <body>
     <main class="App"></main>
-    <script src="js/App.js" type="module"></script>
+
+    <!-- 앱 진입점 -->
+    <script src="js/index.js" type="module"></script>
   </body>
 </html>
